fixed archive text overflow; updated about page; added declaration menu; fixed minor issues

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 @font-face {
   font-family: llpixel;
+  font-weight: 400;
   src: url(../fonts/LLPIXEL3.ttf);
 }
 
